Source/WebCore/rendering/RenderBox.cpp
@@ -5033,17 +5033,18 @@ LayoutUnit RenderBox::offsetFromLogicalTopOfFirstPage() const
     return containerBlock->offsetFromLogicalTopOfFirstPage() + logicalTop();
 }
 
-const RenderBox* RenderBox::findEnclosingScrollableContainer() const
+const RenderBox* RenderBox::findEnclosingScrollableContainerForSnapping() const
 {
     for (auto& candidate : lineageOfType<RenderBox>(*this)) {
         if (candidate.hasOverflowClip())
             return &candidate;
     }
-    // If all parent elements are not overflow scrollable, check the body.
-    // FIXME: We should not treat the body as the scrollable element (see webkit.org/b/210469).
-    if (document().body() && frame().view() && frame().view()->isScrollable())
-        return document().body()->renderBox();
-    
+
+    // If all parent elements are not overflow scrollable and the frame is, then return
+    // the root element.
+    if (document().documentElement() && frame().view() && frame().view()->isScrollable())
+        return document().documentElement()->renderBox();
+
     return nullptr;
 }
 
